--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -7,7 +7,10 @@
     android:background="#FFFFFF"
     android:columnCount="1"
     android:orientation="vertical"
-    android:padding="30sp"
+    android:paddingTop="15sp"
+    android:paddingLeft="30sp"
+    android:paddingRight="30sp"
+    android:paddingBottom="30sp"
     android:rowCount="3"
     tools:context=".NewMessage">
 
