--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -18,10 +18,10 @@
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
         android:padding="5sp"
         android:textAlignment="center"
         android:textSize="25sp"
+        android:background="@drawable/custom"
         android:textStyle="bold|italic" />
 
     <TextView
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom"
         android:hint="Digite em morse"
         android:padding="7.5sp"
         android:textAlignment="center"
