--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -21,7 +21,7 @@
             android:id="@+id/translated_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="@drawable/custom"
             android:gravity="center_horizontal"
             android:padding="7.5sp"
             android:textAlignment="center"
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
-            android:background="#FFFFFF"
+            android:background="@drawable/custom"
             android:gravity="center_horizontal"
             android:hint="Digite o número do telefone"
             android:padding="7.5sp"
